# Muninn

./: .gitattributes  .gitignore  .muninn_server.pid  Analyzing PR Comments.md  CHANGELOG_REMEDIATION.md  CITATIONS.md  DESIGN_BRIEF.md  Dockerfile  FINAL_REMEDIATION_REPORT.md  GEMINI.md  HANDOFF.md  LICENSE  NOTICE  PR_UPDATE.md  README.md  REMEDIATION_HANDOFF.md  SESSION_COMPLETE.md  SOTA_PLUS_PLAN.md  config.template.yaml  dashboard.css  dashboard.html  docker-compose.yml  fix_fastembed.py  ingest_history.py  launch_muninn.ps1  mcp_wrapper.py  muninn_standalone.py  muninn_tray.py  out.txt  package-lock.json  package.json  parser_isolation.patch  pr_50.json  pr_list.json  pr_view.json  prs.json  pyproject.toml  pytest_output.txt  requirements.txt  run_muninn.bat  (+11 more)
.continue/mcpServers/: new-mcp-server.yaml
.github/workflows/: benchmark.yml  transport-incident-replay-gate.yml
.serena/: project.yml
.serena/memories/: project_overview.md  style_conventions.md  suggest_commands.md  task_completion_checklist.md
assets/: README.md  banner.txt
docs/: AGENT_CONTINUATION_RUNBOOK.md  ARCHITECTURE.md  Benchmarking & Artifact Promotion.md  INGESTION_PIPELINE.md  MUNINN_COMPREHENSIVE_ROADMAP.md  OTEL_GENAI_OBSERVABILITY.md  PLAN_GAP_EVALUATION.md  PYTHON_SDK.md  Refining MCP Verification.md  SOTA_EXPERIMENTAL_REVIEW.md  WEB_RESEARCH_VIBECODER_SOTA.md  roi_and_architecture_analysis.md
docs/archive/: Refining MCP Verification.md
docs/plans/: 2026-02-14-browser-ui-model-policy-design.md  2026-02-14-phase4f-profile-control-design.md  2026-02-14-phase4h-local-ollama-benchmarking.md  2026-02-15-mcp-transport-closed-recovery.md  2026-02-15-phase4aa-mcp-tool-call-timeout-hardening.md  2026-02-15-phase4ab-mcp-startup-recovery-budget-gating.md  2026-02-15-phase4ac-mcp-host-timeout-derived-deadline-budget.md  2026-02-15-phase4ad-mcp-explicit-deadline-overrun-guardrail.md  2026-02-15-phase4ae-mcp-guarded-dispatch-fail-fast-response.md  2026-02-15-phase4af-unified-sota-verdict-command.md  2026-02-15-phase4ag-enhancement-first-benchmark-cadence.md  2026-02-15-phase4i-ability-resource-benchmarking.md  2026-02-15-phase4j-profile-promotion-gates.md  2026-02-15-phase4k-hygiene-gate-and-roadmap-refresh.md  2026-02-15-phase4l-dev-cycle-benchmark-orchestration.md  2026-02-15-phase4l2-mcp-startup-tray-integration.md  2026-02-15-phase4m-dev-cycle-policy-apply-rollback.md  2026-02-15-phase4n-policy-approval-manifest.md  2026-02-15-phase4o-approval-provenance-context.md  2026-02-15-phase4p-apply-checkpoint-provenance-enforcement.md  2026-02-15-phase4q-git-ancestry-enforcement.md  (+39 more)
eval/: README.md  __init__.py  artifacts.py  gates.py  longmemeval_adapter.py  mcp_transport_blocker_decision.py  mcp_transport_closure.py  mcp_transport_diagnostics.py  mcp_transport_incident_replay.py  mcp_transport_soak.py  metrics.py  ollama_benchmark_prompts.jsonl  ollama_local_benchmark.py  ollama_model_matrix.json  ollama_profile_promotion_policy.json  phase_hygiene.py  presets.py  rag_benchmark.py  run.py  run_benchmark.py  scout_benchmark.py  startup_single_owner_stress.py  statistics.py  structmemeval_adapter.py
eval/data/: longmemeval_synthetic_v1.jsonl  (+2 more)
muninn/: __init__.py  cli.py  platform.py  version.py
muninn_test/: kuzu_v12
scripts/: benchmark_colbert_quality.py  build_standalone.py  run_flaky.py
temp_data/: kuzu_v12  metadata.db
temp_data_efficiency/: graph.db  meta.json  metadata.db
test_phase_22_data/: kuzu_v12  metadata.db
tests/: __init__.py  smoke_test_providers.py  test_audio_adapter.py  test_bm25.py  test_build_standalone.py  test_claude_sdk_minimal.py  test_cli_doctor.py  test_cli_rotate_token.py  test_colbert_scorer.py  test_concurrency.py  test_config.py  test_conflict_detection.py  test_delete_all_scoping.py  test_eval_artifacts.py  test_eval_gates.py  test_eval_metrics.py  test_eval_presets.py  test_eval_run.py  test_eval_statistics.py  test_extraction_models.py  test_extraction_pipeline.py  test_extraction_rules.py  test_feature_flags.py  test_federation.py  test_federation_broadcast.py  test_goal_compass.py  test_hybrid_performance.py  test_hybrid_retriever.py  test_ingestion_discovery.py  test_ingestion_manager.py  test_ingestion_parser.py  test_ingestion_pipeline.py  test_instructor_extractor.py  test_mcp_transport_blocker_decision.py  test_mcp_transport_closure.py  test_mcp_transport_diagnostics.py  test_mcp_transport_incident_replay.py  test_mcp_transport_soak.py  test_mcp_wrapper_fallback.py  test_mcp_wrapper_protocol.py  (+59 more)
(+142 files in other folders)
