[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
license-files = ["LICENSE", "NOTICE"]

[tool.setuptools.packages.find]
include = ["muninn*", "eval*", "assets*", "skills*", "models*"]
namespaces = false

[project]
name = "muninn-mcp"
version = "3.18.1"
description = "Local-first, assistant-agnostic persistent memory for AI agents via MCP — Muninn native engine"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Antigravity Labs"}
]
keywords = ["mcp", "memory", "ai", "agents", "rag", "knowledge-graph", "local-first"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
    "Operating System :: OS Independent",
]

dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "python-multipart",
    "requests",
    "httpx>=0.24.0",
    "qdrant-client>=1.7.0",
    "fastembed>=0.2.0",
    "kuzu>=0.4.0",
    # v3.1.0: Cross-platform path resolution
    "platformdirs>=4.0.0",
]

[project.optional-dependencies]
# Instructor-based structured extraction (v3.1.0)
instructor = [
    "instructor>=1.0.0",
    "openai>=1.0.0",
]
tray = [
    "pystray>=0.19.0",
    "Pillow>=10.0.0",
]
service = [
    "pywin32>=306",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]
observability = [
    "opentelemetry-api>=1.27.0",
]
conflict = [
    "transformers>=4.41.0",
    "torch>=2.2.0",
]
ingestion = [
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
]
sdk = [
    "requests>=2.31.0",
    "httpx>=0.24.0",
]
all = [
    "muninn-mcp[instructor,tray,dev,observability,conflict,ingestion,sdk]",
]

[project.scripts]
muninn-server = "server:main"
muninn-tray = "tray_app:main"

[project.urls]
Homepage = "https://github.com/wjohns989/Muninn"
Repository = "https://github.com/wjohns989/Muninn"
Issues = "https://github.com/wjohns989/Muninn/issues"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
